# Fundamental_level

modulo1/: .gitignore  .pre-commit-config.yaml  datos.json  main.py  pyproject.toml
